...
        
        nameLbl.text = viewModel.name
        nameLbl.textColor = .white
        nameLbl.textAlignment = .left
        nameLbl.font = UIFont(name: "HelveticaNeue-Light", size: 25)
        
        logOutButton.setImage(UIImage(named: "logout 2"), for: .normal)
        logOutButton.imageView?.contentMode = .scaleAspectFit
        
        accountFixedLbl.textAlignment = .left
        accountFixedLbl.text = "Conta"
        accountFixedLbl.textColor = .white
        accountFixedLbl.font = UIFont(name: "HelveticaNeue", size: 12)
...
